Add transaction to method findGroupSessionWriteScope