@@ -379,18 +379,20 @@ public class StudyDao extends AbstractDao {
     }
 
     public GroupSessionWriteScope findGroupSessionWriteScope(Long groupResultId) {
-        String queryStr = "SELECT s.groupSessionWriteScope " +
-                "FROM GroupResult gr " +
-                "JOIN gr.batch b " +
-                "JOIN b.study s " +
-                "WHERE gr.id = :groupResultId";
+        return withReadOnlyTransaction(em -> {
+            String queryStr = "SELECT s.groupSessionWriteScope " +
+                    "FROM GroupResult gr " +
+                    "JOIN gr.batch b " +
+                    "JOIN b.study s " +
+                    "WHERE gr.id = :groupResultId";
 
-        List<GroupSessionWriteScope> result = jpa.em().createQuery(queryStr, GroupSessionWriteScope.class)
-                .setParameter("groupResultId", groupResultId)
-                .setMaxResults(1)
-                .getResultList();
+            List<GroupSessionWriteScope> result = em.createQuery(queryStr, GroupSessionWriteScope.class)
+                    .setParameter("groupResultId", groupResultId)
+                    .setMaxResults(1)
+                    .getResultList();
 
-        return result.isEmpty() ? null : result.get(0);
+            return result.isEmpty() ? null : result.getFirst();
+        });
     }
 
 }
